--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+/* heading font urbanist */
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,200;9..40,500;9..40,600;9..40,1000&family=Urbanist:wght@100;200;600;700;800&display=swap");
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -16,7 +19,7 @@
   }
 }
 
-@font-face {
+/* @font-face {
   font-family: monu_ex_reg;
   src: url(../../public/fonts/monument/MonumentExtended-Regular.otf);
 }
@@ -32,4 +35,7 @@
 
 .space_grotesk {
   font-family: space_grotesk;
+} */
+.urbanist {
+  font-family: "Urbanist", sans-serif;
 }
